@@ -10,6 +10,11 @@ What's New in Python 3.3.4 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #19081: When a zipimport .zip file in sys.path being imported from
+  is modified during the lifetime of the Python process after zipimport has
+  already cached the zip's table of contents we detect this and recover
+  rather than read bad data from the .zip (causing odd import errors).
+
 - Issue #17432: Drop UCS2 from names of Unicode functions in python3.def.
 
 - Issue #19969: PyBytes_FromFormatV() now raises an OverflowError if "%c"
